Website updates, more responsive

--- a/nicholas-swift.com/index.html
+++ b/nicholas-swift.com/index.html
@@ -42,7 +42,7 @@
 			<h2 class="fadeInBlock">Products</h2>
 
 			<div class="product2 grid">
-				<div class="col-50 fadeInBlock">
+				<div class="col-50">
 					<img src="img/courseboard.png" />
 				</div>
 
@@ -82,56 +82,147 @@
 		<div class="skills light">
 			<h2 class="fadeInBlock">Skills</h2>
 
-			<div class="list col-100 fadeInBlock">
-				<div class="col-25">
-				<h3>Things I do</h3>
-				</div>
+			<div class="skills-tic-0">
+				<div class="list col-100 fadeInBlock">
+					<div class="col-25">
+					<h3>Things I do</h3>
+					</div>
 
-				<div class="col-25">
-				<p>iOS Development</p>
-				<p>Game Development</p>
-				<p>Product Design</p>
-				</div>
+					<div class="col-25">
+					<p>iOS Development</p>
+					<p>Game Development</p>
+					<p>Product Design</p>
+					</div>
 
-				<div class="col-25">
-				<p>Front End Development</p>
-				<p>Responsive Design</p>
-				<p>Project Management</p>
-				</div>
+					<div class="col-25">
+					<p>Front-end Development</p>
+					<p>Responsive Design</p>
+					<p>Project Management</p>
+					</div>
 
-				<div class="col-25">
-				<p>Back-end Development</p>
-				<p>User Interface & Flow</p>
-				<p>Agile Development</p>
+					<div class="col-25">
+					<p>Back-end Development</p>
+					<p>User Interface & Flow</p>
+					<p>Agile Development</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="skills-tic-1">
+				<div class="list col-100 fadeInBlock">
+					<div class="col-33">
+					<p>iOS Development</p>
+					<p>Game Development</p>
+					<p>Product Design</p>
+					</div>
+
+					<div class="col-33">
+					<p>Front-end Development</p>
+					<p>Responsive Design</p>
+					<p>Project Management</p>
+					</div>
+
+					<div class="col-33">
+					<p>Back-end Development</p>
+					<p>User Interface & Flow</p>
+					<p>Agile Development</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="skills-tic-2">
+				<div class="list col-100 fadeInBlock">
+					<div class="col-50">
+					<p>iOS Development</p>
+					<p>Game Development</p>
+					<p>Product Design</p>
+					<p>Back-end Development</p>
+					</div>
+
+					<div class="col-50">
+					<p>Front-end Development</p>
+					<p>Responsive Design</p>
+					<p>Project Management</p>
+					<p>Agile Development</p>
+					</div>
 				</div>
 			</div>
 
 			<div class="clear"></div>
 
-			<div class="list col-100 fadeInBlock">
-				<div class="col-25">
-				<h3>Stuff I know</h3>
-				</div>
+			<div class="skills-tic-0">
+				<div class="list col-100 fadeInBlock">
+					<div class="col-25">
+					<h3>Stuff I know</h3>
+					</div>
 
-				<div class="col-25">
-				<p>Swift</p>
-				<p>C/C++</p>
-				<p>HTML/CSS</p>
-				<p>Unity</p>
-				</div>
+					<div class="col-25">
+					<p>Swift</p>
+					<p>C/C++</p>
+					<p>HTML/CSS</p>
+					<p>Unity</p>
+					</div>
 
-				<div class="col-25">
-				<p>Python</p>
-				<p>C#</p>
-				<p>Flask</p>
-				<p>Firebase</p>
-				</div>
+					<div class="col-25">
+					<p>Python</p>
+					<p>C#</p>
+					<p>Flask</p>
+					<p>Firebase</p>
+					</div>
 
-				<div class="col-25">
-				<p>Java</p>
-				<p>JavaScript</p>
-				<p>Google App Engine</p>
-				<p>MongoDB</p>
+					<div class="col-25">
+					<p>Java</p>
+					<p>JavaScript</p>
+					<p>Google App Engine</p>
+					<p>MongoDB</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="skills-tic-1">
+				<div class="list col-100 fadeInBlock">
+					<div class="col-33">
+					<p>Swift</p>
+					<p>C/C++</p>
+					<p>HTML/CSS</p>
+					<p>Unity</p>
+					</div>
+
+					<div class="col-33">
+					<p>Python</p>
+					<p>C#</p>
+					<p>Flask</p>
+					<p>Firebase</p>
+					</div>
+
+					<div class="col-33">
+					<p>Java</p>
+					<p>JavaScript</p>
+					<p>Google App Engine</p>
+					<p>MongoDB</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="skills-tic-2">
+				<div class="list col-100 fadeInBlock">
+					<div class="col-50">
+					<p>Swift</p>
+					<p>C/C++</p>
+					<p>HTML/CSS</p>
+					<p>Unity</p>
+					<p>Java</p>
+					<p>JavaScript</p>
+					</div>
+
+					<div class="col-50">
+					<p>Python</p>
+					<p>C#</p>
+					<p>Flask</p>
+					<p>Firebase</p>
+					<p>Google App Engine</p>
+					<p>MongoDB</p>
+					</div>
 				</div>
 			</div>
 
@@ -151,15 +242,17 @@
 
 		<div class="light contact">
 			<div class="text">
-				<h2 class="fadeInBlock">Let's Get In Contact</h2>
+				<h2 class="fadeInBlock">Contact</h2>
 
 				<p class="fadeInBlock">I'm interested in you, you're interested in me, <span class="color-red">it's a match!</span><br>Shoot me a message and let's get in contact :)</p>
 		     
 		        <form action="code/contact.php" method="post" name="contact-form" class="fadeInBlock">
+		        	<p>
 		            <input name="name" type="text" placeholder="Your name">
+		            </p>
 
 		            <p class="emailbox">
-		            <input name="email" type="text" placeholder="Your Email Address">
+		            <input name="email" type="text" placeholder="Your email address">
 		            </p>
 
 		            <p class="emailmessage">
@@ -179,7 +272,7 @@
 			<div class="social fadeInBlock">
 				<a href="https://github.com/Nicholas-Swift" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
 				<a href="https://www.linkedin.com/in/NicholasWSwift" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
-				<a href="https://github.com/Nicholas-Swift"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
+				<a href="https://medium.com/@nicholas.w.swift" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
 				<a href="mailto:nicholas.w.swift@gmail.com?Subject=hello"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
 			</div>
 
