--- a/nicholas-swift.com/index.html
+++ b/nicholas-swift.com/index.html
@@ -31,53 +31,57 @@
 			<div class="text">
 				<h1>Nicholas Swift</h1>
 				<p>iOS Developer &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp; Software Developer &nbsp;&nbsp;&nbsp; | &nbsp;&nbsp;&nbsp; Web Developer</p>
+                <div class="social">
+                    <a href="https://github.com/Nicholas-Swift" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/NicholasWSwift" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a>
+                    <a href="https://medium.com/@nicholas.w.swift" target="_blank"><i class="fa fa-medium fa-2x" aria-hidden="true"></i></a>
+                    <a href="mailto:nicholas.w.swift@gmail.com?Subject=hello"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a>
+                </div>
 			</div>
 			<div class="down">
 				<i class="fa fa-arrow-down fa-lg" aria-hidden="true"></i>
 			</div>
 		</div>
 
-		<div class="products light first-div">
+        <div class="products light first-div">
+            <h2 class="fadeInBlock">Products</h2>
+            <div class="product2 grid">
+                <div class="col-50">
+                    <img src="img/courseboard.png" />
+                </div>
 
-			<h2 class="fadeInBlock">Products</h2>
+                <div class="col-50 fadeInBlock">
+                    <div class="text">
+                        <h3>Course Board</h3>
+                        <p>Course Board is a project based course management system that is currently used in Make School's Product Academy.</p>
+                        <p>Wrote a swift wrapper for the Course Board Web API and published it privately for other students to be able to use and develop for.</p>
+                        <p>Designed and programmed the entire app from scratch in Swift.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="clear"></div>
 
-			<div class="product2 grid">
-				<div class="col-50">
-					<img src="img/courseboard.png" />
-				</div>
+        </div>
 
-				<div class="col-50 fadeInBlock">
-					<div class="text">
-						<h3>Course Board</h3>
-						<p>Course Board is a project based course management system that is currently used in Make School's Product Academy.</p>
-						<p>Wrote a swift wrapper for the Course Board Web API and published it privately for other students to be able to use and develop for.</p>
-						<p>Designed and programmed the entire app from scratch in Swift.</p>
-					</div>
-				</div>
-			</div>
-			<div class="clear"></div>
+        <div class="products">
 
-		</div>
+            <div class="product2 grid">
+                <div class="col-50">
+                    <img src="img/auxmusic.png" />
+                </div>
 
-		<div class="products">
+                <div class="col-50 fadeInBlock">
+                    <div class="text">
+                        <h3>Aux Music</h3>
+                        <p>I am one of the cofounders of Aux Music, an app that's bringing the social aspect back to music in a big way.</p>
+                        <p>One of the two front end iOS developers for the app. Implemented many screens such as the music player and profile screens.</p>
+                        <p>Responsible for design, creation, and content for the promotional website.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="clear"></div>
 
-			<div class="product2 grid">
-				<div class="col-50">
-					<img src="img/auxmusic.png" />
-				</div>
-
-				<div class="col-50 fadeInBlock">
-					<div class="text">
-						<h3>Aux Music</h3>
-						<p>I am one of the cofounders of Aux Music, an app that's bringing the social aspect back to music in a big way.</p>
-						<p>One of the two front end iOS developers for the app. Implemented many screens such as the music player and profile screens.</p>
-						<p>Responsible for design, creation, and content for the promotional website.</p>
-					</div>
-				</div>
-			</div>
-			<div class="clear"></div>
-
-		</div>
+        </div>
 
 		<div class="skills light">
 			<h2 class="fadeInBlock">Skills</h2>
@@ -95,13 +99,13 @@
 					</div>
 
 					<div class="col-25">
-					<p>Front-end Development</p>
+					<p>Frontend Development</p>
 					<p>Responsive Design</p>
 					<p>Project Management</p>
 					</div>
 
 					<div class="col-25">
-					<p>Back-end Development</p>
+					<p>Backend Development</p>
 					<p>User Interface & Flow</p>
 					<p>Agile Development</p>
 					</div>
@@ -117,13 +121,13 @@
 					</div>
 
 					<div class="col-33">
-					<p>Front-end Development</p>
+					<p>Frontend Development</p>
 					<p>Responsive Design</p>
 					<p>Project Management</p>
 					</div>
 
 					<div class="col-33">
-					<p>Back-end Development</p>
+					<p>Backend Development</p>
 					<p>User Interface & Flow</p>
 					<p>Agile Development</p>
 					</div>
@@ -136,11 +140,11 @@
 					<p>iOS Development</p>
 					<p>Game Development</p>
 					<p>Product Design</p>
-					<p>Back-end Development</p>
+					<p>Backend Development</p>
 					</div>
 
 					<div class="col-50">
-					<p>Front-end Development</p>
+					<p>Frontend Development</p>
 					<p>Responsive Design</p>
 					<p>Project Management</p>
 					<p>Agile Development</p>
@@ -244,7 +248,7 @@
 			<div class="text">
 				<h2 class="fadeInBlock">Contact</h2>
 
-				<p class="fadeInBlock">I'm interested in you, you're interested in me, <span class="color-red">it's a match!</span><br>Shoot me a message and let's get in contact :)</p>
+				<p class="fadeInBlock">Don't be afraid, I promise I don't bite!</span><br>Shoot me a message and let's get in contact :)</p>
 		     
 		        <form action="code/contact.php" method="post" name="contact-form" class="fadeInBlock">
 		        	<p>
